# t5_claim_normalization

./: .gitattributes  .gitignore  README.md  T5_Prompt_Tuning.ipynb  normalized_claims.csv  normalized_claims.xlsx  pyproject.toml  requirements.txt  t5_base_lora.ipynb
base_models/model_base_manual_prompting/: config.json  generation_config.json  model.safetensors  tokenizer.json
base_models/model_small_no_prompt/: Untitled1.ipynb
fine_tuned/t5_base_lora/: README.md  adapter_config.json  adapter_model.safetensors  tokenizer_config.json
model/: config.json  model.safetensors
model_small_manual_prompting/: model.safetensors
prompt_tuned/t5_base_peft/: README.md  adapter_config.json  adapter_model.safetensors  tokenizer.json  tokenizer_config.json
prompt_tuned/t5_small_peft/: README.md  adapter_config.json  adapter_model.safetensors
t5_claim_normalization/: __init__.py  evaluate_meteor.py  model_test.py  run_training.py  test.py
